--- a/IngresoPedidos/FormularioPedidoWindow.xaml
+++ b/IngresoPedidos/FormularioPedidoWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         Height="428" Width="226" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/add.png">
 
-    <Grid FocusManager.FocusedElement="{Binding ElementName=tbPedido}" Width="220" Height="399">
+    <Grid Width="220" Height="399">
 
         <!--<Label Content="OBSERVACION" Margin="10,228,10,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" Padding="1" Background="{x:Null}" FontFamily="Consolas" VerticalAlignment="Top"/>-->
         <TextBox Name="tbArticulo" Text="ARTICULO" Foreground="LightGray" TextWrapping="Wrap" Margin="10,103,10,0" FontFamily="Consolas" FontSize="14" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="4" Height="26" VerticalAlignment="Top" FontWeight="Bold"/>
@@ -27,7 +27,7 @@
         </ComboBox>
         <TextBox Name="tbPedido" Text="PEDIDO" Foreground="LightGray" IsEnabled="True" Margin="10,10,10,0" TextWrapping="Wrap" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="20" FontFamily="Consolas" FontWeight="Bold" TabIndex="1" Height="26" VerticalAlignment="Top"/>
 
-        <TextBox Name="tbObservacion" Text="OBSERVACION" Foreground="LightGray" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" TabIndex="8" Height="135" VerticalAlignment="Top" Margin="10,227,10,0" FontWeight="Bold"/>
+        <TextBox Name="tbObservacion"  Text="OBSERVACION" Foreground="LightGray" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" MaxLength="240" Padding="3" FontFamily="Consolas" BorderBrush="#FFABADB3" TabIndex="8" Height="135" VerticalAlignment="Top" Margin="10,227,10,0" FontWeight="Bold"/>
         <Button Name="btnGuardar" Click="btnGuardar_Click" Content="Guardar" ToolTip="Guardar en Base de Datos" Margin="0,0,0,10" TabIndex="9" Height="22" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="70"/>
     </Grid>
 </Window>
