--- a/IngresoPedidos/MostrarPedidoPopupWindow.xaml
+++ b/IngresoPedidos/MostrarPedidoPopupWindow.xaml
@@ -3,14 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:IngresoPedidos"
         mc:Ignorable="d"
-         Height="200" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/add.png">
-    <Grid Width="294" Height="171">
+         Height="240" Width="320" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" SizeToContent="WidthAndHeight" Icon="/IngresoPedidos;component/Resources/add.png">
+    <Grid Width="314" Height="211">
         <Label Name="lblPedido" Content="PEDIDO" Margin="10,10,10,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Consolas" FontWeight="Bold" TabIndex="1" Height="26" VerticalAlignment="Top" Padding="1" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1"/>
         <Label Name="lblDescripcion" Content="DESCRIPCION" Margin="10,41,10,0" FontFamily="Consolas" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" TabIndex="4" Height="26" VerticalAlignment="Top" FontWeight="Bold" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1"/>
         <Label Name="lblIngreso" Content="INGRESO" Margin="10,72,10,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Consolas" TabIndex="7" Height="26" VerticalAlignment="Top" FontWeight="Bold" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1"/>
         <Label Name="lblEstado" Content="ESTADO" Background="#FFFFF0F0" Margin="10,103,10,0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Consolas" Padding="5" TabIndex="6" Height="26" VerticalAlignment="Top" FontWeight="Bold" BorderBrush="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" BorderThickness="1"/>
-        <Button Name="btnSeleccionar" Click="BtnSeleccionar_Click" Content="Seleccionar" ToolTip="Seleccionar y mostrar el pedido en la lista" Margin="0,0,0,10" TabIndex="9" Height="22" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="70"/>
+        <Button Name="btnSeleccionar" Click="BtnSeleccionar_Click" Style="{StaticResource MaterialDesignFlatButton}" Content="Seleccionar" ToolTip="Seleccionar y mostrar el pedido en la lista" Margin="0,0,0,30" TabIndex="9" VerticalAlignment="Bottom" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="120" Height="32"/>
     </Grid>
 </Window>
